--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	
-	<name>Starter Project</name>
-	<description>This is the Starter Project for the students of Design &amp; Testing.</description>
+	<name>Acme Planner</name>
+	<description>This project helps students to start working on a formal information system project in Design &amp; Testing II's subject.</description>
 
-	<artifactId>Starter-Project</artifactId>
-	<version>21.2</version>
+	<artifactId>Acme-Planner</artifactId>
+	<version>1.0</version>
 	<packaging>war</packaging>
 
 	<parent>
