Change development port 8080 > 8083. JAR to WAR.

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
 	<artifactId>Acme-Planner</artifactId>
 	<version>1.0</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
