--- a/pom.xml
+++ b/pom.xml
@@ -1,37 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- 
-  - pom.xml 
-  -   
-  - Copyright (C) 2012-2021 Rafael Corchuelo. 
-  -
-  - In keeping with the traditional purpose of furthering education and research, it is 
-  - the policy of the copyright owner to permit non-commercial use and redistribution of 
-  - this software. It has been tested carefully, but it is not guaranteed for any particular 
-  - purposes. The copyright owner does not offer any warranties or representations, nor do 
-  - they accept any liabilities with respect to them. 
-  -->
+<!-- - pom.xml - - Copyright (C) 2012-2021 Rafael Corchuelo. - - In keeping 
+	with the traditional purpose of furthering education and research, it is 
+	- the policy of the copyright owner to permit non-commercial use and redistribution 
+	of - this software. It has been tested carefully, but it is not guaranteed 
+	for any particular - purposes. The copyright owner does not offer any warranties 
+	or representations, nor do - they accept any liabilities with respect to 
+	them. -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<name>Acme Planner</name>
 	<description>This project helps students to start working on a formal information system project in Design &amp; Testing II's subject.</description>
 
 	<artifactId>Acme-Planner</artifactId>
 	<version>1.0</version>
-	<packaging>war</packaging>
+	<packaging>${packaging.type}</packaging>
+
+	<profiles>
+		<profile>
+			<id>webapp</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<packaging.type>war</packaging.type>
+			</properties>
+		</profile>
+		<profile>
+			<id>batch</id>
+			<properties>
+				<packaging.type>jar</packaging.type>
+			</properties>
+		</profile>
+	</profiles>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.4.2</version>
-		<relativePath/>	
+		<relativePath />
 	</parent>
-	
+
 	<properties>
 		<sourceDirectory>${basedir}/src</sourceDirectory>
 		<targetDirectory>${basedir}/target</targetDirectory>
@@ -56,7 +70,7 @@
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
-			</plugin>			
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -181,14 +195,14 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<!-- Testing -->
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
@@ -228,7 +242,7 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.4</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
