--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<description>This project helps students to start working on a formal information system project in Design &amp; Testing II's subject.</description>
 
 	<artifactId>Acme-Planner</artifactId>
-	<version>1.0</version>
+	<version>21.3</version>
 	<packaging>war</packaging>
 
 	<parent>
@@ -175,7 +175,12 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+			<!--<scope>runtime</scope> -->
+		</dependency>
+
+		<dependency>
+		   	<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>	        
 		</dependency>
 
 		<!-- Testing -->
