--- a/src/main/properties/application-production.properties
+++ b/src/main/properties/application-production.properties
@@ -14,9 +14,9 @@
 # HINT+ - server.servlet.contextPath
 # HINT+ - server.port
 
-spring.datasource.url							= jdbc:mysql://localhost:3306/Acme-Planner?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username						= acme-user
-spring.datasource.password						= ACME-Us3r-P@ssw0rd
+spring.datasource.url							= jdbc:mysql://bbnqwxw10bvnackv3bm0-mysql.services.clever-cloud.com:3306/bbnqwxw10bvnackv3bm0?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username						= u7wyzvwsvtezzjar
+spring.datasource.password						= UtMAMAGxNPDZFVkWYrov
 
 spring.jpa.hibernate.show-sql					= false
 spring.jpa.hibernate.format-sql					= false
